// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> renders a H2 title 1`] = `
<div>
  <div
    class="sc-gswNZR bnttDR"
  >
    <h2
      class="sc-hLBbgP dNVHJv"
    >
      <span
        class="sc-bcXHqe ebNMxn"
      />
      Lorem Ipsum
    </h2>
  </div>
</div>
`;

exports[`<Title /> renders a shifted H2 title (the stripe should be 10rem to the left) 1`] = `
<div>
  <div
    class="sc-gswNZR hBEZdJ"
  >
    <h2
      class="sc-hLBbgP gUFmAN"
    >
      <span
        class="sc-bcXHqe ebNMxn"
      />
      Lorem Ipsum
    </h2>
  </div>
</div>
`;

exports[`<Title /> renders a unstriped H2 title 1`] = `
<div>
  <div
    class="sc-gswNZR bnttDR"
  >
    <h2
      class="sc-hLBbgP fvFwrK"
    >
      Lorem Ipsum
    </h2>
  </div>
</div>
`;
